@@ -1,6 +1,6 @@
 Package: DiffBind
 Type: Package
-Version: 3.3.2
+Version: 3.3.3
 Title: Differential Binding Analysis of ChIP-Seq Peak Data
 Authors@R: c(person("Rory","Stark", email="rory.stark@cruk.cam.ac.uk",
                   role = c("aut", "cre")),
